# bigint

./: .gitignore  CMakeLists.txt  README.md  main.cpp  version.cmake  version.h
bigint/: CMakeLists.txt  bigint.cpp  bigint.h
bigint/tests/: CMakeLists.txt  arithmetics.cpp  init.cpp  operators.cpp  output.cpp
