cmake_minimum_required(VERSION 3.0)
project(bigint_lib)

set(CMAKE_CXX_STANDARD 17)

enable_testing()
include(FetchContent)
FetchContent_Declare(
  googletest
  URL https://github.com/google/googletest/archive/03597a01ee50ed33e9dfd640b249b4be3799d395.zip
)

FetchContent_MakeAvailable(googletest)

add_library(bigint SHARED ${CMAKE_CURRENT_SOURCE_DIR}/bigint.h ${CMAKE_CURRENT_SOURCE_DIR}/bigint.cpp)

include(GoogleTest)
add_subdirectory(tests)